Fix:Testing and Docs
